syntax = "proto2";

package sentencepiece;

// ModelProto: SentencePieceモデルの最上位メッセージ
message ModelProto {
  repeated SentencePiece pieces = 1;
  optional TrainerSpec trainer_spec = 2;
  optional NormalizerSpec normalizer_spec = 3;
  optional string self_test_text = 4;
  optional string denormalizer_spec = 5;
}

// SentencePiece: 各トークンの情報
message SentencePiece {
  enum Type {
    NORMAL = 1;
    UNKNOWN = 2;
    CONTROL = 3;
    USER_DEFINED = 4;
    UNUSED = 5;
    BYTE = 6;
  }
  
  optional string piece = 1;
  optional float score = 2;
  optional Type type = 3 [default = NORMAL];
}

// TrainerSpec: トレーニング仕様
message TrainerSpec {
  repeated string input = 1;
  optional string input_format = 2;
  optional string model_prefix = 3;
  optional string model_type = 4;
  optional int32 vocab_size = 5 [default = 8000];
  repeated string accept_language = 6;
  optional int32 self_test_sample_size = 7 [default = 0];
  optional float character_coverage = 8 [default = 0.9995];
  optional int32 input_sentence_size = 9 [default = 0];
  optional bool shuffle_input_sentence = 10 [default = true];
  optional int32 seed_sentencepiece_size = 11 [default = 1000000];
  optional float shrinking_factor = 12 [default = 0.75];
  optional int32 max_sentence_length = 13 [default = 4192];
  optional int32 num_threads = 14 [default = 16];
  optional int32 num_sub_iterations = 15 [default = 2];
  optional int32 max_sentencepiece_length = 16 [default = 16];
  optional bool split_by_unicode_script = 17 [default = true];
  optional bool split_by_number = 18 [default = true];
  optional bool split_by_whitespace = 19 [default = true];
  optional bool treat_whitespace_as_suffix = 20 [default = false];
  optional bool allow_whitespace_only_pieces = 21 [default = false];
  repeated string control_symbols = 22;
  repeated string user_defined_symbols = 23;
  optional string required_chars = 24;
  optional bool byte_fallback = 25 [default = false];
  optional bool vocabulary_output_piece_score = 26 [default = true];
  optional bool hard_vocab_limit = 27 [default = true];
  optional bool use_all_vocab = 28 [default = false];
  optional int32 unk_id = 30 [default = 0];
  optional int32 bos_id = 31 [default = 1];
  optional int32 eos_id = 32 [default = 2];
  optional int32 pad_id = 33 [default = -1];
  optional string unk_piece = 34 [default = "<unk>"];
  optional string bos_piece = 35 [default = "<s>"];
  optional string eos_piece = 36 [default = "</s>"];
  optional string pad_piece = 37 [default = "<pad>"];
  repeated string unk_surface = 38;
  optional bool train_extremely_large_corpus = 39 [default = false];
}

// NormalizerSpec: 正規化仕様
message NormalizerSpec {
  optional string name = 1;
  optional string precompiled_charsmap = 2;
  optional bool add_dummy_prefix = 3 [default = true];
  optional bool remove_extra_whitespaces = 4 [default = true];
  optional bool escape_whitespaces = 5 [default = true];
  optional string normalization_rule_tsv = 6;
}